--- a/mitrabajo/index.html
+++ b/mitrabajo/index.html
@@ -1,37 +1,102 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>All Stars</title>
-</head>
-<body>
-    <div id="container">
- <header>
-    <h1>All Stars</h1> 
- </header>
+    <head>
+        <title>All Stars</title>
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="estilos.css">
+    </head>
+    <body class="nashe">
+        <div id="container">
+            <header>
+                <h1 class="titulo">All Stars</h1> 
+            </header>
 
-<h2>
-    INFORMACION AL INSTANTE
-</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/JjRKKNVgMKs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<h2>
-Ahora
-</h2>
-<a href="https://librefutboltv.com/" target="_blank">
-<img src="ahora.jpg" alt="yaya" style="width: 500px;height: 100px;">
-</a>
-
-
-
-
-
-<h3>
-    anuncios
-</h3>    
-    <a href="https://www.instagram.com/faq.silva/" target="_blank">
-        <img src="pngtree-pure-black-dark-background-wallpaper-image_396553.jpg" alt="yaya" style="width: 200px;height: 200px;">
-    <a href="https://www.youtube.com/" target="_blank">
-        <img src="pngtree-pure-black-dark-background-wallpaper-image_396553.jpg" alt="yaya" style="width: 200px;height: 200px;">   
-   
-</div>
-</body>
+         <ul class="menu">
+        <li><a href="#infoya">Nuevo</a></li>
+        <li><a href="#ahora">Ahora</a></li>
+        <li><a href="#partidos">Partidos</a></li>
+        <li><a href="#partidos">Informacion</a></li>
+         </ul>
+            <h2 class="blanco" id="infoya">INFORMACION AL INSTANTE</h2>
+            <div class="insta">
+                <div class="videomessi">
+                    <h2 class="arriba">Entrevista a Messi de OLGA</h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qYwlqx-JLok?si=Nh-zBDxihR5bmDtt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+                </div>
+                <div class="changuito">
+                    <h2 class="arriba">Estremecedor: el Changuito Zeballos se lesionó y lloró al salir</h2>
+                    <img src="changuit.webp" alt="changuito" style="width: 650px;height: 315px;">
+                </div>
+            </div>
+            <div class="insta2">
+                <div class="escalo">
+                    <h2 class="arriba">Scaloni comparó a Boca con Argentina campeón en Qatar</h2>
+                    <img src="mamahuevos.webp" alt="changuito" style="width: 650px;height: 315px;">
+                </div> 
+                <div class="escalo2">
+                    <h2 class="arriba">Scaloni: cómo está Messi, los hinchas visitantes</h2>
+                    <img src="messi.webp" alt="changuito" style="width: 650px;height: 315px;">
+                    <div id="ahora"></div>
+                </div> 
+            </div>
+            <h2 class="blanco">Ahora</h2>
+            <div class="fotitosahora">
+             <a href="https://librefutboltv.com/" target="_blank"><img src="quierolalibertafores.png" alt="yaya" style="width: 500px;height: 150px;"></a>
+             <a href="https://librefutboltv.com/" target="_blank"><img src="para.png" alt="yaya" style="width: 500px;height: 150px;"></a>
+             <a href="https://librefutboltv.com/" target="_blank"><img src="ARG.png" alt="yaya" style="width: 500px;height: 150px;"></a>
+            </div>
+            <div class="fechas">
+                <div class="partidos" id="partidos">
+                    <h2>Mas Partidos</h2>
+                    <div class="a">
+                        <div class="liga">
+                        <h3>LPF </h3>
+                        <a href="https://www.promiedos.com.ar/primera" target="_blank"><img class="click" src="lpf.png" alt=""></a>
+                        </div>
+                        <div class="liga">
+                        <h3>Premier League</h3>
+                        <a href="https://www.promiedos.com.ar/inglaterra" target="_blank"><img class="click" src="premier.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="b">
+                        <div class="liga">
+                            <h3>La Liga</h3>
+                            <a href="https://www.promiedos.com.ar/espana" target="_blank"><img class="click" src="la liga.png" alt=""></a>
+                        </div>    
+                        <div class="liga">
+                            <h3>MLS</h3>
+                            <a href="https://www.promiedos.com.ar/usa" target="_blank"><img class="click" src="mls.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="partidos">
+                    <h2>Información</h2>
+                    <div class="a">
+                        <div class="liga">
+                            <h3>Messi</h3>
+                            <a href="https://messi.com/" target="_blank"><img class="click" src="messi.png" alt="messi"></a>
+                        </div>
+                        <div class="liga">
+                            <h3>Boca</h3>
+                            <a href="https://www.bocajuniors.com.ar/noticias" target="_blank"><img class="click" src="boca.png" alt="boca"></a>
+                        </div>
+                    </div>
+                    <div class="b">
+                        <div class="liga">
+                            <h3>River</h3>
+                            <a href="https://www.cariverplate.com.ar/todas-las-noticias" target="_blank"><img class="click" src="river.png" alt="river"></a>
+                        </div>    
+                        <div class="liga">
+                            <h3>Libertadores</h3>
+            <a href="https://conmebollibertadores.com/" target="_blank"><img class="click" src="liberadores.png" alt="libertadores"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+            
+            <h3>Anuncios</h3>    
+            <a href="https://www.instagram.com/faq.silva/" target="_blank"><img src="pngtree-pure-black-dark-background-wallpaper-image_396553.jpg" alt="yaya" style="width: 200px;height: 200px;"><a href="https://www.youtube.com/" target="_blank">
+            <img src="pngtree-pure-black-dark-background-wallpaper-image_396553.jpg" alt="yaya" style="width: 200px;height: 200px;">
+        </div>
+    </body>
 </html>
